Multiple content changes , bug fixes , and fixed blog page

--- a/adynamics3/jj.html
+++ b/adynamics3/jj.html
@@ -184,7 +184,7 @@
 
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-    <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+    <a href="./jj.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
       <img src="./img/adynamicsLogo.png" width="180px" height="auto" alt="" />
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -198,12 +198,12 @@
           <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="./jj.html" class="nav-item nav-link active">Home</a>
             <a href="./testComponents/about-hero.html" class="nav-item nav-link ">About</a>
-            <a href="./testComponents/cource-aboutpage.html" class="nav-item nav-link">Flying</a>
+            <a href="./testComponents/flying.html" class="nav-item nav-link">Flying</a>
             <div class="dropdown">
               <a href="./testComponents/clasess.html" class="nav-item nav-link nav-dropdown">Classes</a>
               <div class="dropdown-menu">
                 <a href="./inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                <a href="./course-details.html">DGCA Ground Classes</a>
+                <a href="./inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
                 <a href="./inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
                 <a href="./inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
               </div>
@@ -357,8 +357,8 @@
             <li><a href="#0" data-date="16/01/2014" class="cd-h-timeline__date cd-h-timeline__date--selected">
                 STEPS TO BECOME A PILOT</a></li>
             </a></li>
-            <li><a href="#0" data-date="28/02/2014" class="cd-h-timeline__date"> DGCA CPL Ground Training</a></li>
-            <li><a href="#0" data-date="20/04/2014" class="cd-h-timeline__date">CPL Training
+            <li><a href="#1" data-date="28/02/2014" class="cd-h-timeline__date"> DGCA CPL Ground Training</a></li>
+            <li><a href="#2" data-date="20/04/2014" class="cd-h-timeline__date">CPL Training
               </a></li>
             <li><a href="#0" data-date="20/05/2014" class="cd-h-timeline__date">DGCA CPL Conversion</a></li>
             <li><a href="#0" data-date="09/07/2014" class="cd-h-timeline__date">Type Rating
@@ -369,7 +369,6 @@
               </a></li>
             <!-- <li><a href="#0" data-date="10/12/2014" class="cd-h-timeline__date">10 Dec</a></li> -->
             <!-- <li><a href="#0" data-date="19/01/2015" class="cd-h-timeline__date">29 Jan</a></li> -->
-            <li><a href="#0" data-date="03/03/2015" class="cd-h-timeline__date">END</a></li>
           </ol>
 
           <span class="cd-h-timeline__filling-line" aria-hidden="true"></span>
@@ -1088,7 +1087,7 @@
               <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
                 <img class="img-fluid border-r10" src="./img/DgcaCpl.png" alt="" />
                 <div class="courses-overlay">
-                  <a class="btn btn-outline-primary border-2 courses-btn-bg" href="./course-details.html">Read More</a>
+                  <a class="btn btn-outline-primary border-2 courses-btn-bg" href="./inidvidual-clases/dgcaground.html">Read More</a>
                 </div>
               </div>
             </div>
@@ -1348,7 +1347,7 @@
                   </p>
                 </div>
                 <div class="col-lg-5  " data-wow-delay="0.3s">
-                  <video autoplay controls loop>
+                  <video muted controls loop>
                     <source src="/adynamics3/assets/video/adynamics final draft.mp4" type="video/mp4">
                   </video>
                 </div>
@@ -1368,7 +1367,7 @@
                   </p>
                 </div>
                 <div class="col-lg-5  " data-wow-delay="0.3s">
-                  <video autoplay controls loop>
+                  <video muted controls loop>
                     <source src="/adynamics3/assets/video/adynamic ajeesh vid.mp4" type="video/mp4">
                   </video>
                 </div>
@@ -1411,8 +1410,8 @@
 
 
             <div class="text-center p-4 pt-2">
-              <h5 class="mt-2">Full Name</h5>
-              <span>software test engineer</span>
+              <h5 class="mt-2">Himanshu Dayalan</h5>
+              <span>Instructor</span>
             </div>
           </div>
         </div>
@@ -1442,8 +1441,8 @@
                 </div> -->
 
             <div class="text-center p-4 pt-2">
-              <h5 class="mt-2">Full Name</h5>
-              <span>software test engineer</span>
+              <h5 class="mt-2">Ankita Halalli</h5>
+              <span>Instructor</span>
             </div>
           </div>
         </div>
@@ -1457,8 +1456,8 @@
 
 
             <div class="text-center p-4 pt-2">
-              <h5 class="mt-2">Full Name</h5>
-              <span>software test engineer</span>
+              <h5 class="mt-2">Kirti Ahuja</h5>
+              <span>Instructor</span>
             </div>
           </div>
         </div>
@@ -1471,8 +1470,8 @@
               ; alt="" />
 
             <div class="text-center p-4 pt-2">
-              <h5 class="mt-2">Full Name</h5>
-              <span>software test engineer</span>
+              <h5 class="mt-2">Ananya Jain</h5>
+              <span>Instructor</span>
             </div>
           </div>
         </div>
