--- a/adynamics3/testComponents/flying.html
+++ b/adynamics3/testComponents/flying.html
@@ -67,7 +67,7 @@
     <!-- Topbar End -->
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+        <a href="jj.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <img src="../img/adynamicsLogo.png" width="180px" height="auto" alt="" />
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -81,13 +81,13 @@
                     <div class="navbar-nav ms-auto p-4 p-lg-0">
                         <a href="../jj.html" class="nav-item nav-link ">Home</a>
                         <a href="../testComponents/about-hero.html" class="nav-item nav-link ">About</a>
-                        <a href="../testComponents/cource-aboutpage.html" class="nav-item nav-link active">Flying</a>
+                        <a href="../testComponents/flying.html" class="nav-item nav-link active">Flying</a>
                         <div class="dropdown">
                             <a href="../testComponents/clasess.html"
                                 class="nav-item nav-link nav-dropdown ">Classes</a>
                             <div class="dropdown-menu">
                                 <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                                <a href="../course-details.html">DGCA Ground Classes</a>
+                                <a href="../inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
                                 <a href="../inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
                                 <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
                             </div>
@@ -780,7 +780,7 @@
                 <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
                     <div class="text-center p-4">
                         <h5 class="mb-3 mt-2 mt-xl-1">
-                            CPL Training in India</h5>
+                            DGCA CPL Conversion in India</h5>
                         <p>
                             Demanding program intended to ready individuals for a professional pilot career.
                         </p>
@@ -789,7 +789,7 @@
                                 <i class="fa fa-signal text-primary me-2"></i>Beginner
                             </li>
                             <li class="breadcrumb-item small">
-                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Week
+                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Weeks
                             </li>
                             <li>
                                 <i class="fa fa-map-marker text-primary me-2"></i>Click to learn more
@@ -811,7 +811,7 @@
                 <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
                     <div class="text-center p-4">
                         <h5 class="mb-3 mt-2 mt-xl-1">
-                            CPL Training in USA</h5>
+                            FAA CPL Training in USA</h5>
                         <p>
                             Accelerate your path to becoming a pilot with FAA CPL.
                         </p>
@@ -841,7 +841,7 @@
             <div  data-wow-delay="0.3s">
                 <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
                     <div class="text-center p-4">
-                        <h5 class="mb-3 mt-2 mt-xl-1">CPL Training in South Africa</h5>
+                        <h5 class="mb-3 mt-2 mt-xl-1">SACAA CPL Training in South Africa</h5>
                         <p>
 
                             Many aspiring pilots worldwide choose of its excellent aviation infrastructure and training
@@ -852,7 +852,7 @@
                                 <i class="fa fa-signal text-primary me-2"></i>Beginner
                             </li>
                             <li class="breadcrumb-item small">
-                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Week
+                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Weeks
                             </li>
                             <li>
                                 <i class="fa fa-map-marker text-primary me-2"></i>Click to learn more
@@ -874,7 +874,7 @@
                 <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
                     <div class="text-center p-4">
                         <h5 class="mb-3 mt-2 mt-xl-1">
-                            CPL Training in Morocco</h5>
+                            B737 Type Rating in Morocco</h5>
                         <p>
                             Demanding program intended to ready individuals for a professional pilot career.
                         </p>
@@ -883,7 +883,7 @@
                                 <i class="fa fa-signal text-primary me-2"></i>Beginner
                             </li>
                             <li class="breadcrumb-item small">
-                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Week
+                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Weeks
                             </li>
                             <li>
                                 <i class="fa fa-map-marker text-primary me-2"></i>Click to learn more
@@ -904,7 +904,7 @@
             <div  data-wow-delay="0.3s">
                 <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
                     <div class="text-center p-4">
-                        <h5 class="mb-3 mt-2 mt-xl-1">CPL Training in Argentina</h5>
+                        <h5 class="mb-3 mt-2 mt-xl-1">ANAC CPL Training in Argentina</h5>
                         <p>
 
                             Many aspiring pilots worldwide choose of its excellent aviation infrastructure and training
@@ -915,7 +915,7 @@
                                 <i class="fa fa-signal text-primary me-2"></i>Beginner
                             </li>
                             <li class="breadcrumb-item small">
-                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Week
+                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Weeks
                             </li>
                             <li>
                                 <i class="fa fa-map-marker text-primary me-2"></i>Click to learn more
@@ -933,10 +933,11 @@
             </div>
         </div>
         <div class="tunisia">
+            <div class="d-flex gap-3">
             <div  data-wow-delay="0.3s">
-                <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
+                <div class="courses-item d-flex flex-column arc-shadow overflow-hidden">
                     <div class="text-center p-4">
-                        <h5 class="mb-3 mt-2 mt-xl-1">CPL cum Type Rating in Tunisia</h5>
+                        <h5 class="mb-3 mt-2 mt-xl-1">OACA CPL Training in Tunisia</h5>
                         <p>Complete both CPL and Type Rating at Tunisia and access student loans for both.</p>
                         <ol class="breadcrumb justify-content-space-between mb-0">
                             <li class="breadcrumb-item small">
@@ -956,6 +957,30 @@
                     </div>
                 </div>
             </div>
+            <div  data-wow-delay="0.3s">
+                <div class="courses-item d-flex flex-column arc-shadow overflow-hidden">
+                    <div class="text-center p-4 ">
+                        <h5 class="mb-3 mt-2 mt-xl-1">A320 CPL Training in Tunisia</h5>
+                        <p>Complete both CPL and Type Rating at Tunisia and access student loans for both.</p>
+                        <ol class="breadcrumb d-flex justify-content-space-between mb-0" >
+                            <li class="breadcrumb-item small">
+                                <i class="fa fa-signal text-primary me-2"></i>Beginner
+                            </li>
+                            <li>
+                                <i class="fa fa-map-marker text-primary me-2" style="margin-left: 5px;"></i>Click to learn more
+                            </li>
+                        </ol>
+                    </div>
+                    <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
+                        <img class="img-fluid border-r10" src="../img/cource1.png" alt="" />
+                        <div class="courses-overlay">
+                            <a class="btn btn-outline-primary border-2 courses-btn-bg"
+                                href="../inidvidual-clases/cpltunisia.html">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </div>
 
@@ -964,32 +989,32 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <h2>CPL Training in Tunisia</h2>
+                    <h2>CPL cum Type Rating in Tunisia</h2>
                     <img src="../assets/img/OIG1.jpeg" class="d-block w-100" alt="...">
                     <a href="../inidvidual-clases/cpltunisia.html">Learn More</a>
                 </div>
                 <div class="carousel-item">
-                    <h2>CPL Training in USA</h2>
+                    <h2>FAA CPL Training in USA</h2>
                     <img src="../assets/img/OIG2.jpeg" class="d-block w-100" alt="...">
                     <a href="../inidvidual-clases/cpltaring.html">Learn More</a>
                 </div>
                 <div class="carousel-item">
-                    <h2>CPL Training in India</h2>
+                    <h2>DGCA CPL Conversion in India</h2>
                     <img src="../assets/img/OIG3.jpeg" class="d-block w-100" alt="...">
                     <a href="../inidvidual-clases/CONVESION.html">Learn More</a>
                 </div>
                 <div class="carousel-item">
-                    <h2>CPL Training in Morocco</h2>
+                    <h2>B737 Type Rating in Morocco</h2>
                     <img src="../assets/img/OIG4.jpeg" class="d-block w-100" alt="...">
                     <a href="../inidvidual-clases/cplmorocco.html">Learn More</a>
                 </div>
                 <div class="carousel-item">
-                    <h2>CPL Training in Argentina</h2>
+                    <h2>ANAC CPL Training in Argentina</h2>
                     <img src="../assets/img/OIG5.jpeg" class="d-block w-100" alt="...">
                     <a href="../inidvidual-clases/cplargentina.html">Learn More</a>
                 </div>
                 <div class="carousel-item">
-                    <h2>CPL Training in South Africa</h2>
+                    <h2>SACAA CPL Training in South Africa</h2>
                     <img src="../assets/img/OIG6.jpeg" class="d-block w-100" alt="...">
                     <a href="../inidvidual-clases/cplsouth.html">Learn More</a>
                 </div>
