--- a/adynamics3/feature.html
+++ b/adynamics3/feature.html
@@ -75,7 +75,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+        <a href="jj.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <img src="/adynamics3/img/adynamicsLogo.png" width="180px" height="auto" alt="" />
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -89,13 +89,13 @@
                     <div class="navbar-nav ms-auto p-4 p-lg-0">
                         <a href="/adynamics3/jj.html" class="nav-item nav-link active">Home</a>
                         <a href="/adynamics3/testComponents/about-hero.html" class="nav-item nav-link ">About</a>
-                        <a href="/adynamics3/testComponents/cource-aboutpage.html" class="nav-item nav-link">Flying</a>
+                        <a href="/adynamics3/testComponents/flying.html" class="nav-item nav-link">Flying</a>
                         <div class="dropdown">
                             <a href="/adynamics3/testComponents/clasess.html"
                                 class="nav-item nav-link nav-dropdown ">Classes</a>
                             <div class="dropdown-menu">
                                 <a href="/adynamics3/inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                                <a href="/adynamics3/course-details.html">DGCA Ground Classes</a>
+                                <a href="/adynamics3/dgcaground.html">DGCA Ground Classes</a>
                                 <a href="/adynamics3/inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
                                 <a href="/adynamics3/inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
                             </div>
