--- a/adynamics3/inidvidual-clases/cplmorocco.html
+++ b/adynamics3/inidvidual-clases/cplmorocco.html
@@ -46,7 +46,7 @@
   </div>
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-    <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+    <a href="jj.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
       <img src="../img/adynamicsLogo.png" width="180px" height="auto" alt="" />
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -61,14 +61,14 @@
 
             <a href="../jj.html" class="nav-item nav-link active">Home</a>
             <a href="../testComponents/about-hero.html" class="nav-item nav-link ">About</a>
-            <a href="../testComponents/cource-aboutpage.html" class="nav-item nav-link">Flying</a>
+            <a href="../testComponents/flying.html" class="nav-item nav-link">Flying</a>
 
 
             <div class="dropdown">
               <a href="/adynamics3/testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
               <div class="dropdown-menu">
                 <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                <a href="../course-details.html">DGCA Ground Classes</a>
+                <a href="../inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
                 <a href="../inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
                 <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
               </div>
@@ -462,7 +462,7 @@
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
               <img class="img-fluid border-r10" src="../img/DGCACpl3.png" alt="" />
               <div class="courses-overlay">
-                <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../course-details.html">Read More</a>
+                <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../inidvidual-clases/dgcaground.html">Read More</a>
               </div>
             </div>
           </div>
@@ -571,7 +571,7 @@
               <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
                 <img class="img-fluid border-r10 w-100 h-100" src="../img/DGCACpl3.png" alt="" />
                 <div class="courses-overlay">
-                  <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../course-details.html">Read More</a>
+                  <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../inidvidual-clases/dgcaground.html">Read More</a>
                 </div>
               </div>
             </div>
