--- a/adynamics3/testComponents/clasess.html
+++ b/adynamics3/testComponents/clasess.html
@@ -65,7 +65,7 @@
   <!-- Topbar End -->
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-    <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+    <a href="jj.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
       <img src="/adynamics3/img/adynamicsLogo.png" width="180px" height="auto" alt="" />
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -79,12 +79,12 @@
           <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="../jj.html" class="nav-item nav-link">Home</a>
             <a href="../testComponents/about-hero.html" class="nav-item nav-link ">About</a>
-            <a href="..//testComponents/cource-aboutpage.html" class="nav-item nav-link">Flying</a>
+            <a href="..//testComponents/flying.html" class="nav-item nav-link">Flying</a>
             <div class="dropdown">
               <a href="..//testComponents/clasess.html" class="nav-item nav-link nav-dropdown active">Classes</a>
               <div class="dropdown-menu">
                 <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
-                <a href="../course-details.html">DGCA Ground Classes</a>
+                <a href="../inidvidual-clases/dgcaground.html">DGCA Ground Classes</a>
                 <a href="../inidvidual-clases/RTR.html">Radio Telephony (RTR) Class</a>
                 <a href="../inidvidual-clases/niosclasses.html">NIOS Prep Class</a>
               </div>
@@ -162,7 +162,7 @@
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
               <img class="img-fluid border-r10" src="../img/DGCACpl3.png" alt="" />
               <div class="courses-overlay">
-                <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../course-details.html">Read More</a>
+                <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../inidvidual-clases/dgcaground.html">Read More</a>
               </div>
             </div>
           </div>
