--- a/adynamics3/404.html
+++ b/adynamics3/404.html
@@ -71,7 +71,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <a href="jj.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
+        <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
             <h2 class="m-0"><i class="fa fa-car text-primary me-2"></i>Drivin</h2>
         </a>
         <button type="button" class="navbar-toggler me-4 navbar-toggleBtn" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -79,7 +79,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="jj.html" class="nav-item nav-link">Home</a>
+                <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="courses.html" class="nav-item nav-link">Courses</a>
                 <div class="nav-item dropdown">
