--- a/adynamics3/inidvidual-clases/niosclasses.html
+++ b/adynamics3/inidvidual-clases/niosclasses.html
@@ -77,7 +77,7 @@
 
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-    <a href="jj.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+    <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
       <img src="../img/adynamicsLogo.png" width="180px" height="auto" alt="" />
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -90,7 +90,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto p-4 p-lg-0">
 
-            <a href="../jj.html" class="nav-item nav-link active">Home</a>
+            <a href="../index.html" class="nav-item nav-link active">Home</a>
             <a href="../testComponents/about-hero.html" class="nav-item nav-link ">About</a>
             <a href="../testComponents/flying.html" class="nav-item nav-link">Flying</a>
 
