fix enquiry page routing

--- a/adynamics3/index.html
+++ b/adynamics3/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="description" />
   <link rel="stylesheet" href="assets/css/style.css">
   <!-- Favicon -->
-  <link href="img/adynamicsLogo.png" rel="icon" />
+  <link href="./img/adynamicsLogo.png" rel="icon" />
 
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
