--- a/adynamics3/enquiry.html
+++ b/adynamics3/enquiry.html
@@ -68,7 +68,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <img src="/adynamics3/img/adynamicsLogo.png" width="180px" height="auto" alt="" />
+            <img src="./img/adynamicsLogo.png" width="180px" height="auto" alt="" />
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
                     <div class="navbar-nav ms-auto p-4 p-lg-0">
                         <a href="./index.html" class="nav-item nav-link">Home</a>
                         <a href="./testComponents/about-hero.html" class="nav-item nav-link ">About</a>
-                        <a href=".//testComponents/flying.html" class="nav-item nav-link">Flying</a>
+                        <a href="./testComponents/flying.html" class="nav-item nav-link">Flying</a>
                         <div class="dropdown">
                             <a href=".//testComponents/clasess.html" class="nav-item nav-link nav-dropdown">Classes</a>
                             <div class="dropdown-menu">
