--- a/adynamics3/testComponents/about-hero.html
+++ b/adynamics3/testComponents/about-hero.html
@@ -19,6 +19,7 @@
   <!-- Icon Font Stylesheet -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" >
 
   <!-- Libraries Stylesheet -->
   <link href="../lib/animate/animate.min.css" rel="stylesheet" />
@@ -293,34 +294,37 @@
 
   <!-- counter end -->
   <!-- Footer Start -->
-  <footer class="new_footer_area bg_color">
+  <footer class="new_footer_area bg_color  ft_mar">
     <div class="new_footer_top">
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s"
               style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-              <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
-              <p>Don’t miss any updates of our new templates and extensions.!</p>
-              <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
-                <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
-                <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
-                <p class="mchimp-errmessage" style="display: none;"></p>
-                <p class="mchimp-sucmessage" style="display: none;"></p>
-              </form>
+              <h3 class="f-title f_600 t_color f_size_18">Contact</h3>
+              <p><i class="fa fa-map-marker-alt me-2"></i>Bengaluru, Karnataka </p>
+              <p><i class="fa-solid fa-phone me-2"></i>+91-8296076136 </p>
+              <p style="display:flex;">
+                <i class="fa-solid fa-envelope me-2" style="padding-top:6px;"></i>
+                <span>
+                <a href="mailto:himanshu@adynamics.in">himanshu@adynamics.in</a>
+                <a href="mailto:kriti@adynamics.in">kriti@adynamics.in</a>
+                </span>
+              </p>
+
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s"
               style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-              <h3 class="f-title f_600 t_color f_size_18">Download</h3>
+              <h3 class="f-title f_600 t_color f_size_18">Courses</h3>
               <ul class="list-unstyled f_list">
-                <li><a href="#">Company</a></li>
-                <li><a href="#">Android App</a></li>
-                <li><a href="#">ios App</a></li>
-                <li><a href="#">Desktop</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">My tasks</a></li>
+                <li><a href="#">A320 Pre Type Rating Class</a></li>
+                <li><a href="#">DGCA Ground Classes</a></li>
+                <li><a href="#">Radio Telephony (RTR) Class</a></li>
+                <li><a href="#">NIOS Prep Class</a></li>
+                <li><a href="#">cpl conversion</a></li>
+                <li><a href="#">sacAA CPL</a></li>
               </ul>
             </div>
           </div>
@@ -329,12 +333,12 @@
               style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
               <h3 class="f-title f_600 t_color f_size_18">Help</h3>
               <ul class="list-unstyled f_list">
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Term &amp; conditions</a></li>
-                <li><a href="#">Reporting</a></li>
-                <li><a href="#">Documentation</a></li>
-                <li><a href="#">Support Policy</a></li>
-                <li><a href="#">Privacy</a></li>
+                <li><a href="./testComponents/about-hero.html">About us</a></li>
+                <li><a href="#testi">Testimonial</a></li>
+                <li><a href="#teamm">Team</a></li>
+                <li><a href="#demo">Demo Vedio</a></li>
+                <li><a href="./testComponents/about-hero.html">Contact</a></li>
+                <li><a href="./testComponents/clasess.html">Training</a></li>
               </ul>
             </div>
           </div>
@@ -353,12 +357,10 @@
         </div>
       </div>
       <div class="footer_bg">
-        <div class="footer_bg_one"></div>
-        <div class="footer_bg_two"></div>
       </div>
     </div>
-
   </footer>
+
   <!-- Footer End -->
 
 
