Commented out Meet Team Section

--- a/adynamics3/index.html
+++ b/adynamics3/index.html
@@ -351,7 +351,6 @@
       <div class="x4">
         <div class="cloud"></div>
       </div>
-
     </div>
     <div class="content-wrapper">
       <div class="demo-class">
@@ -1768,8 +1767,8 @@
   </section>
   <!-- Testimonial End -->
 
-  <!-- Team Start-->
-  <div class="container-xxl pt-5 py-6 pt-lg-6" id="teamm">
+  <!-- Team Start -->
+  <!-- <div class="container-xxl pt-5 py-6 pt-lg-6" id="teamm">
     <div class="container">
       <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px">
         <h6 class="text-primary text-uppercase mb-2">Meet The Team</h6>
@@ -1792,24 +1791,6 @@
           <div class="team-item position-relative mx-1">
             <img class="img-fluid w-50 team-item-img" src="img/team-2.jpg" style="margin-left: auto; margin-right: auto"
               alt="" />
-            <!-- <div class="team-social text-center">
-                  <a
-                    class="btn btn-square btn-outline-primary border-2 m-1"
-                    href=""
-                    ><i class="fab fa-facebook-f"></i
-                  ></a>
-                  <a
-                    class="btn btn-square btn-outline-primary border-2 m-1"
-                    href=""
-                    ><i class="fab fa-twitter"></i
-                  ></a>
-                  <a
-                    class="btn btn-square btn-outline-primary border-2 m-1"
-                    href=""
-                    ><i class="fab fa-instagram"></i
-                  ></a>
-                </div> -->
-
             <div class="text-center p-4 pt-2">
               <h5 class="mt-2">Ankita Halalli</h5>
               <span>Instructor</span>
@@ -1840,9 +1821,9 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- Team Testimonial Start mobile-->
-      <div class="row justify-content-center d-md-none">
+      <!-- <div class="row justify-content-center d-md-none">
         <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <div class="owl-carousel testimonial-carousel">
             <div class="testimonial-item text-center">
@@ -1908,9 +1889,8 @@
           </div>
         </div>
       </div>
-      <!-- Team Testimonial End -->
     </div>
-  </div>
+  </div> -->
   <!-- Team  End -->
 
   <!-- Footer Start -->
