Added new maps for mobile view

--- a/adynamics3/testComponents/flying.html
+++ b/adynamics3/testComponents/flying.html
@@ -989,32 +989,32 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <h2>CPL cum Type Rating in Tunisia</h2>
-                    <img src="../assets/img/OIG1.jpeg" class="d-block w-100" alt="...">
+                    <img src="../assets/img/tunisia.png" class="d-block w-100" alt="..." style="padding: 10px 30px">
                     <a href="../inidvidual-clases/cpltunisia.html">Learn More</a>
                 </div>
                 <div class="carousel-item">
                     <h2>FAA CPL Training in USA</h2>
-                    <img src="../assets/img/OIG2.jpeg" class="d-block w-100" alt="...">
+                    <img src="../assets/img/usa.png" class="d-block w-100" alt="..." style="padding: 75px 10px">
                     <a href="../inidvidual-clases/cpltaring.html">Learn More</a>
                 </div>
                 <div class="carousel-item">
                     <h2>DGCA CPL Conversion in India</h2>
-                    <img src="../assets/img/OIG3.jpeg" class="d-block w-100" alt="...">
+                    <img src="../assets/img/india.png" class="d-block w-100" alt="..." style="padding: 15px 0">
                     <a href="../inidvidual-clases/CONVESION.html">Learn More</a>
                 </div>
                 <div class="carousel-item">
                     <h2>B737 Type Rating in Morocco</h2>
-                    <img src="../assets/img/OIG4.jpeg" class="d-block w-100" alt="...">
+                    <img src="../assets/img/morocco.png" class="d-block w-100" alt="..." style="padding: 10px 10px">
                     <a href="../inidvidual-clases/cplmorocco.html">Learn More</a>
                 </div>
                 <div class="carousel-item">
                     <h2>ANAC CPL Training in Argentina</h2>
-                    <img src="../assets/img/OIG5.jpeg" class="d-block w-100" alt="...">
+                    <img src="../assets/img/argentina.png" class="d-block w-100" alt="..." style="padding: 10px 30px">
                     <a href="../inidvidual-clases/cplargentina.html">Learn More</a>
                 </div>
                 <div class="carousel-item">
                     <h2>SACAA CPL Training in South Africa</h2>
-                    <img src="../assets/img/OIG6.jpeg" class="d-block w-100" alt="...">
+                    <img src="../assets/img/south_africa.png" class="d-block w-100" alt="..." style="padding: 75px 10px">
                     <a href="../inidvidual-clases/cplsouth.html">Learn More</a>
                 </div>
             </div>
