fix git page hosting issues

--- a/adynamics3/inidvidual-clases/niosclasses.html
+++ b/adynamics3/inidvidual-clases/niosclasses.html
@@ -515,7 +515,7 @@
               </ol>
             </div>
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-              <img class="img-fluid border-r10" src="../img/DGCACpl3.png" alt="" />
+              <img class="img-fluid border-r10" src="../img/DgcaCpl3.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg"
                   href="../inidvidual-clases/dgcaground.html">Read More</a>
@@ -542,7 +542,7 @@
               </ol>
             </div>
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-              <img class="img-fluid border-r10" src="../img/RTRclasses.png" alt="" />
+              <img class="img-fluid border-r10" src="../img/rtrclasses.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../inidvidual-clases/RTR.html">Read
                   More</a>
@@ -625,7 +625,7 @@
                 </ol>
               </div>
               <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                <img class="img-fluid border-r10 w-100 h-100" src="../img/DGCACpl3.png" alt="" />
+                <img class="img-fluid border-r10 w-100 h-100" src="../img/DgcaCpl3.png" alt="" />
                 <div class="courses-overlay">
                   <a class="btn btn-outline-primary border-2 courses-btn-bg"
                     href="../inidvidual-clases/dgcaground.html">Read More</a>
@@ -651,7 +651,7 @@
                 </ol>
               </div>
               <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                <img class="img-fluid border-r10 w-100 h-100" src="../img/RTRclasses.png" alt="" />
+                <img class="img-fluid border-r10 w-100 h-100" src="../img/rtrclasses.png" alt="" />
                 <div class="courses-overlay">
                   <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../inidvidual-clases/RTR.html">Read
                     More</a>
