--- a/adynamics3/index.html
+++ b/adynamics3/index.html
@@ -1724,7 +1724,7 @@
                 </div>
                 <div class="col-lg-5" data-wow-delay="0.3s">
                   <video muted controls loop>
-                    <source src="/adynamics3/assets/video/adynamics final draft.mp4" type="video/mp4" />
+                    <source src="./assets/video/adynamics final draft.mp4" type="video/mp4" />
                   </video>
                 </div>
               </div>
@@ -1745,7 +1745,7 @@
                 </div>
                 <div class="col-lg-5" data-wow-delay="0.3s">
                   <video muted controls loop>
-                    <source src="/adynamics3/assets/video/adynamic ajeesh vid.mp4" type="video/mp4" />
+                    <source src="./assets/video/adynamic ajeesh vid.mp4" type="video/mp4" />
                   </video>
                 </div>
               </div>
