--- a/adynamics3/inidvidual-clases/cplmorocco.html
+++ b/adynamics3/inidvidual-clases/cplmorocco.html
@@ -456,7 +456,7 @@
               </ol>
             </div>
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-              <img class="img-fluid border-r10" src="../img/DGCACpl3.png" alt="" />
+              <img class="img-fluid border-r10" src="../img/DgcaCpl3.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg"
                   href="../inidvidual-clases/dgcaground.html">Read More</a>
@@ -483,7 +483,7 @@
               </ol>
             </div>
             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-              <img class="img-fluid border-r10" src="../img/RTRclasses.png" alt="" />
+              <img class="img-fluid border-r10" src="../img/rtrclasses.png" alt="" />
               <div class="courses-overlay">
                 <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../inidvidual-clases/RTR.html">Read
                   More</a>
@@ -566,7 +566,7 @@
                 </ol>
               </div>
               <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                <img class="img-fluid border-r10 w-100 h-100" src="../img/DGCACpl3.png" alt="" />
+                <img class="img-fluid border-r10 w-100 h-100" src="../img/DgcaCpl3.png" alt="" />
                 <div class="courses-overlay">
                   <a class="btn btn-outline-primary border-2 courses-btn-bg"
                     href="../inidvidual-clases/dgcaground.html">Read More</a>
@@ -592,7 +592,7 @@
                 </ol>
               </div>
               <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                <img class="img-fluid border-r10 w-100 h-100" src="../img/RTRclasses.png" alt="" />
+                <img class="img-fluid border-r10 w-100 h-100" src="../img/rtrclasses.png" alt="" />
                 <div class="courses-overlay">
                   <a class="btn btn-outline-primary border-2 courses-btn-bg" href="../inidvidual-clases/RTR.html">Read
                     More</a>
