--- a/adynamics3/inidvidual-clases/cpltaring.html
+++ b/adynamics3/inidvidual-clases/cpltaring.html
@@ -429,7 +429,7 @@
                             </ol>
                         </div>
                         <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                            <img class="img-fluid border-r10" src="../img/DGCACpl3.png" alt="" />
+                            <img class="img-fluid border-r10" src="../img/DgcaCpl3.png" alt="" />
                             <div class="courses-overlay">
                                 <a class="btn btn-outline-primary border-2 courses-btn-bg"
                                     href="../inidvidual-clases/dgcaground.html">Read More</a>
@@ -456,7 +456,7 @@
                             </ol>
                         </div>
                         <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                            <img class="img-fluid border-r10" src="../img/RTRclasses.png" alt="" />
+                            <img class="img-fluid border-r10" src="../img/rtrclasses.png" alt="" />
                             <div class="courses-overlay">
                                 <a class="btn btn-outline-primary border-2 courses-btn-bg"
                                     href="../inidvidual-clases/RTR.html">Read
@@ -543,7 +543,7 @@
                                 </ol>
                             </div>
                             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                                <img class="img-fluid border-r10 w-100 h-100" src="../img/DGCACpl3.png" alt="" />
+                                <img class="img-fluid border-r10 w-100 h-100" src="../img/DgcaCpl3.png" alt="" />
                                 <div class="courses-overlay">
                                     <a class="btn btn-outline-primary border-2 courses-btn-bg"
                                         href="../inidvidual-clases/dgcaground.html">Read More</a>
@@ -569,7 +569,7 @@
                                 </ol>
                             </div>
                             <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                                <img class="img-fluid border-r10 w-100 h-100" src="../img/RTRclasses.png" alt="" />
+                                <img class="img-fluid border-r10 w-100 h-100" src="../img/rtrclasses.png" alt="" />
                                 <div class="courses-overlay">
                                     <a class="btn btn-outline-primary border-2 courses-btn-bg"
                                         href="../inidvidual-clases/RTR.html">Read
