--- a/adynamics3/testComponents/flying.html
+++ b/adynamics3/testComponents/flying.html
@@ -794,7 +794,7 @@
                         </ol>
                     </div>
                     <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                        <img class="img-fluid border-r10" src="../img/DGCACpl2.png" alt="" />
+                        <img class="img-fluid border-r10" src="../img/DgcaCpl2.png" alt="" />
                         <div class="courses-overlay">
                             <a class="btn btn-outline-primary border-2 courses-btn-bg"
                                 href="../inidvidual-clases/CONVESION.html">Read More</a>
