--- a/adynamics3/index.html
+++ b/adynamics3/index.html
@@ -386,7 +386,7 @@
       </div>
     </div>
     <div class="img-wrapper">
-      <img class="fade-in-right" src="./img/HeroBanner.png" />
+      <img class="fade-in-right" src="./img/HeroBanner2.png" />
     </div>
   </section>
 
