Add line and ripple animations for map and redesign map for mobile view

--- a/adynamics3/index.html
+++ b/adynamics3/index.html
@@ -269,7 +269,7 @@
         <a href="./blog/homepageblog.html" class="nav-item nav-link">blog</a>
       </div>
       <div class="button-container">
-        <button class="button-enquiry" onclick="redirectEnquiry()">
+        <button class="button-enquiry" onclick="window.location.href='./enquiry.html'">
           <svg id="svgContainer" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56 56"
             version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g id="start">
@@ -386,7 +386,7 @@
       </div>
     </div>
     <div class="img-wrapper">
-      <img class="fade-in-right" src="./img/HeroBanner2.png" />
+      <img class="slide-in-tr" src="./img/HeroBanner2.png" />
     </div>
   </section>
 
@@ -1948,7 +1948,7 @@
                 </li>
                 <li><a href="#testi">Testimonial</a></li>
                 <li><a href="#teamm">Team</a></li>
-                <li><a href="#demo">Demo Vedio</a></li>
+                <li><a href="#demo">Demo video</a></li>
                 <li>
                   <a href="./testComponents/about-hero.html">Contact</a>
                 </li>
