--- a/adynamics3/testComponents/about-hero.html
+++ b/adynamics3/testComponents/about-hero.html
@@ -336,7 +336,7 @@
                 <li><a href="./testComponents/about-hero.html">About us</a></li>
                 <li><a href="#testi">Testimonial</a></li>
                 <li><a href="#teamm">Team</a></li>
-                <li><a href="#demo">Demo Vedio</a></li>
+                <li><a href="#demo">Demo video</a></li>
                 <li><a href="./testComponents/about-hero.html">Contact</a></li>
                 <li><a href="./testComponents/clasess.html">Training</a></li>
               </ul>
